@@ -14,6 +14,11 @@ NOTE: Do not "tidy" or change the indenting here, or we break svn annotate
       typical user of about 20% (ADAMK)
     - Add language names/translated texts to select_language list (SEWI)
     - Fixed ticket #865 Wrong document type in View Document As (PLAVEN)
+    - New Padre::Wx::Display screen geometry library for handling multiple
+      screens, weird geometry setups and other weird stuff that coders
+      have on their development setups. Padre's main window uses this to
+      calculate an elegant golden-ratio uniform-margin default position
+      and size (ADAMK)
 
 0.58 2010.03.08  **WARNING Still not stable**
     - Fixed "Open File In Existing Padre" for non-win32 (PDONELAN)
